--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #fff;
 }
 .header{
     display: flex;
